--- a/Compenergy/app/src/main/AndroidManifest.xml
+++ b/Compenergy/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:fullBackupContent="true">
+        <meta-data
+            android:name="android.app.searchable"
+            android:resource="@xml/searchable">
+        </meta-data>
         <activity
             android:name=".ActMain"
             android:label="@string/app_name"
@@ -16,11 +20,16 @@
             android:screenOrientation="portrait" >
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.APP_CALCULATOR" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable">
+            </meta-data>
         </activity>
     </application>
 
