--- a/Compenergy/app/src/main/AndroidManifest.xml
+++ b/Compenergy/app/src/main/AndroidManifest.xml
@@ -11,12 +11,11 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="android.app.searchable"
-            android:resource="@xml/searchable"></meta-data>
+            android:resource="@xml/searchable" />
 
         <activity
             android:name=".ActMain"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
@@ -30,9 +29,9 @@
 
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/searchable"></meta-data>
+                android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".ActEditCarrier"></activity>
+        <activity android:name=".ActEditCarrier" />
     </application>
 
 </manifest>
