Fixed keyboard showing when opening editor and closing editor. Also added a few more layout stuff for the compare fragment

--- a/Compenergy/app/src/main/AndroidManifest.xml
+++ b/Compenergy/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".ActEditCarrier" />
+        <activity android:name=".ActEditCarrier"
+                  android:windowSoftInputMode="stateHidden"/>
     </application>
 
 </manifest>
