--- a/Compenergy/app/src/main/AndroidManifest.xml
+++ b/Compenergy/app/src/main/AndroidManifest.xml
@@ -32,8 +32,9 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".ActEditCarrier"
-                  android:windowSoftInputMode="stateHidden"/>
+        <activity
+            android:name=".ActEditCarrier"
+            android:windowSoftInputMode="stateHidden"/>
     </application>
 
 </manifest>
