Added an empty activity for the selection of items

--- a/Compenergy/app/src/main/AndroidManifest.xml
+++ b/Compenergy/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         </activity>
         <activity
             android:name=".ActEditCarrier"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".ActSelectItem"></activity>
     </application>
 
 </manifest>
